--- a/src/Card-page.css
+++ b/src/Card-page.css
@@ -1,11 +1,19 @@
 .container{
     max-width: 350px;
-    background-color: aquamarine;
-    max-height: 550px;
+    max-height: 600px;
     overflow:hidden;
     margin: 30px auto 0;
     border-radius: 6%;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     box-shadow: 5px 5px 10px;
-    
+    }
+.header{
+    background: url(./images/ab1.jpg);
+    background-size: cover;
+    color:white;
+    position:relative;
+}
+.Overlay{
+   padding :3 em 2em;
+   box-sizing: border-box;
 }
