--- a/src/Card-page.css
+++ b/src/Card-page.css
@@ -1,3 +1,8 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Hind+Madurai&display=swap');
+body{
+    background-color: white;
+}
 .container{
     max-width: 350px;
     max-height: 600px;
@@ -30,8 +35,94 @@
 }
 .month-year{
     text-transform: uppercase;
-    font-weight: bold;
     font-size: 1em;
     letter-spacing: 1.5px;
     margin-top: 2px;
+}
+.button{
+    position: absolute;
+    background: orange;
+    width: 50px;
+    height: 50px;
+    font-size: 3em;
+    font-weight: 300;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: -25px;
+    right: 20px;
+    box-shadow: 0 0 8px #202020;
+}
+
+.timeline{
+
+ul{
+        padding: 1em 0 0 2em;
+        margin: 0;
+        list-style: none;
+        position: relative;
+
+        &::before{
+            content: ' ';
+            height: 100%;
+            width: 1px;
+            background-color: black;
+            position: absolute;
+            top: 0;
+            left: 2.5em;
+            z-index: -1;
+        }
+    }
+}
+
+li div {
+    display: inline-block;
+    margin: 1em 0;
+    vertical-align: top;
+  }
+
+  .b {
+    width: 1em;
+    height: 1em;
+    box-sizing: border-box;
+    border-radius: 50%;
+    background: white;
+    z-index: 1;
+    margin-right: 1em;
+    
+    &.first {
+      border: 2px solid orange;
+    }
+    
+    &.second {
+      border: 2px solid turquoise;
+    }
+    
+    
+    &.third {
+      border: 2px solid red;
+    }
+  }
+
+.time{
+    width: 20%;
+    font-size: 0.75em;
+    padding-top: 0.25em;
+}
+.description{
+    width: 50%;
+}
+
+h3{
+    font-size: 1em;
+    font-weight: 400;
+    margin: 0;
+}
+
+h4{
+    margin: 0;
+    font-size: 0.8em;
+    font-weight: 400;
+    color: grey;
 }
