--- a/src/Card-page.css
+++ b/src/Card-page.css
@@ -5,7 +5,7 @@ body{
 }
 .container{
     max-width: 350px;
-    max-height: 600px;
+    max-height: 630px;
     overflow:hidden;
     margin: 30px auto 0;
     border-radius: 6%;
@@ -42,41 +42,40 @@ body{
 .button{
     position: absolute;
     background: orange;
+    cursor: pointer;
     width: 50px;
     height: 50px;
-    font-size: 3em;
+    font-size: 1.8em;
     font-weight: 300;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
-    bottom: -25px;
+    bottom: -22px;
     right: 20px;
     box-shadow: 0 0 8px #202020;
 }
 
-.timeline{
+.timeline ul {
+    padding: 1em 0 0 2em;
+    margin: 0;
+    list-style: none;
+    position: relative;
+  }
+  
+  .timeline ul::before {
+    content: ' ';
+    height: 100%;
+    width: 1px;
+    background-color: black;
+    position: absolute;
+    top: 0;
+    left: 2.5em;
+    z-index: -1;
+  }
+  
 
-ul{
-        padding: 1em 0 0 2em;
-        margin: 0;
-        list-style: none;
-        position: relative;
-
-        &::before{
-            content: ' ';
-            height: 100%;
-            width: 1px;
-            background-color: black;
-            position: absolute;
-            top: 0;
-            left: 2.5em;
-            z-index: -1;
-        }
-    }
-}
-
-li div {
+ li div {
     display: inline-block;
     margin: 1em 0;
     vertical-align: top;
